<?xml version="1.0"?>
<package>
  <name>rr_cloud_bridge_analyzer</name>
  <version>0.0.0</version>
  <description>The rr_cloud_bridge_analyzer package</description>

  <maintainer email="mahdi@todo.todo">mahdi</maintainer>
  <license>Commercial</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>rr_cloud_bridge</run_depend>
  <run_depend>rr_tools_plotting</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
